test_files/netlist_cmp/valid/valid_case_02_b.net
C4 FILTER 0 100n
R3 SOURCE FILTER 1k
V2 SOURCE 0 PULSE(0 5 0 1n 1n 1u 2u)
.tran 10u
.backanno
.end
